# dev-library-cpp

./: .gitignore  CMakeLists.txt
architecture/: CMakeLists.txt  Entity.cpp  Entity.h  main.cpp
cpp-core/: CMakeLists.txt
cpp-core/WinAPI/01/: CMakeLists.txt  README.md  main.cpp
cpp-core/WinAPI/02/: CMakeLists.txt  main.cpp
design-patterns/: CMakeLists.txt
design-patterns/fundamental-patterns/: CMakeLists.txt
design-patterns/fundamental-patterns/behavioral/strategy/: main.cpp
